[package]
name = "urai-ecma"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive", "env"] }
foyer = { version = "0.22.3", features = ["serde"] }
jsdoc = { version = "23.0.0", features = ["serde"] }
petgraph = { version = "0.8.3", features = ["all"] }
rayon = "1.12.0"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
swc_atoms = "9.0.3"
swc_common = "23.0.2"
swc_ecma_ast = "25.0.0"
swc_ecma_codegen = "28.0.2"
swc_ecma_parser = "41.1.2"
swc_ecma_transforms_macros = "1.0.1"
swc_ecma_transforms_react = "50.0.0"
swc_ecma_transforms_typescript = { version = "50.0.0", features = ["concurrent"] }
swc_ecma_visit = { version = "25.0.0", features = ["serde"] }
tiktoken = { version = "3.5.1", features = ["rayon"] }
tokenizers = "0.23.1"
